name:                docbuilder
version:             0.1.0.0
synopsis:            Compile helper for markdown and asciidoc.
description:
  Provied a utility that compiles markdown using pandoc and asciidoc using
  asciidoctor, a file system watcher to automatically recompile and a server for
  browsing the compiled html.
license:             MIT
license-file:        LICENSE
author:              Justus Adam
maintainer:          dev@justus.science
-- copyright:
category:            Text
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10
tested-with:         GHC >= 7.10

source-repository head
  type:     git
  location: git://github.com/JustusAdam/docbuilder.git

executable docbuilder
  main-is:             Main.hs
  -- other-modules:
  other-extensions:    LambdaCase, NamedFieldPuns, OverloadedStrings
  build-depends:
      base
    , bytestring
    , directory
    , filepath
    , process
    , blaze-html
    , pandoc
    , warp
    , text
    , http-types
    , mime-types
    , wai
    , mustache >= 0.3
    , fsnotify
    , cmdargs
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options: -Wall
